# ACPBeeStockProject

./: .gitignore  README.md  acp_bee_rag_client.py  acp_bee_rag_tool.py  config.toml  pyproject.toml  utils.py
acpbeestockproject/: acp_bee_rag_client.py  acp_bee_rag_io.py  acp_bee_rag_prompt.py  acp_bee_rag_server.py  acp_bee_rag_tool.py  acp_bee_rag_tool_utils.py  acp_bee_rag_tools.py
ollama/: pyvenv.cfg
